[tool.poetry]
name = "googleit"
version = "0.1.0"
description = ""
authors = ["meirdev <maornet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.27.1"
beautifulsoup4 = "^4.11.1"
colorama = "^0.4.5"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
